# Quantitative-trading-project

./: Cargo.toml  Dockerfile  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
data/: sample_data.csv
docs/: architecture.mmd
examples/: sma_crossover.rs
